[package]
name = "moon_world"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16", features = [ "derive" ] }
log = "0.4"
nalgebra = "0.33"
rand_distr = "0.4"
rapier2d = "0.22"
rodio = "0.19"
wgpu = "22.0"
winit = "0.30"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
json = "0.12"

edge_lib = { git = "https://github.com/GhostMinerPlus/edge_lib.git" }
sqlite-dm = { git = "https://github.com/GhostMinerPlus/edge_lib.git" }
view-manager = { git = "https://github.com/GhostMinerPlus/view-manager.git" }
moon_err = { git = "https://github.com/GhostMinerPlus/moon_err.git" }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
