[workspace]
members = [".", "drawer"]

[package]
name = "moon_world"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.5"
bytemuck = { version = "1.16", features = [ "derive" ] }
log = "0.4"
nalgebra = "0.33"
rand_distr = "0.4"
rodio = "0.19"
wgpu = "22.1"
winit = "0.30"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
json = "0.12"
rapier3d = "0.22"

moon_class = { git = "https://github.com/GhostMinerPlus/moon_class.git", features = ["no_send"] }
sqlite-cm = { git = "https://github.com/GhostMinerPlus/moon_class.git", features = ["no_send"] }
deno-cm = { git = "https://github.com/GhostMinerPlus/moon_class.git", features = ["no_send"] }
view-manager = { git = "https://github.com/GhostMinerPlus/view-manager.git" }

drawer = { path = "drawer" }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
