[package]
name = "sqlite-dm"
version = "0.1.0"
edition = "2021"

[dependencies]
edge_lib = { git = "https://github.com/GhostMinerPlus/edge_lib.git" }
log = "0.4.22"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
